--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 theme: jekyll-theme-cayman
 
+layout: default
+markdown: kramdown
+kramdown:
+  toc_levels: 1..2
+
 title: "Generative Robust Audio Watermarking"
